<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nutrition.TitleScreen">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/titleScreenInvisibleButton"
        android:translationZ="5dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:translationZ="-5dp">
    </TextView>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_1"
        android:textSize="40sp"
        android:textColor="#FF6200EE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title2"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="180dp">
    </TextView>

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_2"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/title1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="180dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_3"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>